--- a/src/main/resources/com/example/FACT/homebase.fxml
+++ b/src/main/resources/com/example/FACT/homebase.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,45 +12,50 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="156.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.BaseController">
+<?import javafx.scene.layout.StackPane?>
+<AnchorPane prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.HomeBaseController">
    <children>
       <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: ffffffff;">
          <children>
-            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="80.0" prefWidth="490.0">
+            <BorderPane prefHeight="590.0" prefWidth="1200.0">
                <top>
-                  <AnchorPane BorderPane.alignment="CENTER">
+                  <AnchorPane prefHeight="87.0" prefWidth="4081.0" BorderPane.alignment="CENTER">
                      <children>
-                        <ImageView fx:id="brandingImageView" fitHeight="55.0" fitWidth="200.0" layoutX="40.0" layoutY="-25.0" pickOnBounds="true">
-                           <viewport>
-                              <Rectangle2D />
-                           </viewport>
-                           <Image url="@../../../../../../images/logo.png" />
-                        </ImageView>
-                        <Button fx:id="closeButton" contentDisplay="CENTER" graphicTextGap="1.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="13.0" prefWidth="18.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="X" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-50.0" AnchorPane.topAnchor="-10.0">
-                           <font>
-                              <Font name="Helvetica Bold" size="14.0" />
-                           </font>
-                           <effect>
-                              <Blend />
-                           </effect>
-                        </Button>
-                        <Button fx:id="minimizeButton" contentDisplay="CENTER" ellipsisString="" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#minimizeButtonAction" prefHeight="32.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="—" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="-10.0">
-                           <font>
-                              <Font name="Helvetica Bold" size="10.0" />
-                           </font>
-                           <effect>
-                              <Blend />
-                           </effect>
-                        </Button>
+                        <ButtonBar buttonMinWidth="35.0" prefHeight="40.0" prefWidth="200.0">
+                          <buttons>
+                              <Button fx:id="minimizeButton" contentDisplay="CENTER" ellipsisString="" mnemonicParsing="false" onAction="#minimizeButtonAction" prefHeight="32.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="—" textAlignment="CENTER" textFill="#3578c9">
+                                 <font>
+                                    <Font name="Helvetica Bold" size="10.0" />
+                                 </font>
+                                 <effect>
+                                    <Blend />
+                                 </effect>
+                              </Button>
+                              <Button fx:id="closeButton" contentDisplay="CENTER" graphicTextGap="1.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="13.0" prefWidth="18.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="X" textAlignment="CENTER" textFill="#3578c9">
+                                 <font>
+                                    <Font name="Helvetica Bold" size="14.0" />
+                                 </font>
+                                 <effect>
+                                    <Blend />
+                                 </effect>
+                              </Button>
+                              <ImageView fx:id="brandingImageView" fitHeight="55.0" fitWidth="200.0" pickOnBounds="true">
+                                 <viewport>
+                                    <Rectangle2D />
+                                 </viewport>
+                                 <Image url="@../../../../../../images/logo.png" />
+                              </ImageView>
+                          </buttons>
+                        </ButtonBar>
                      </children>
                      <padding>
                         <Insets bottom="25.0" />
                      </padding>
                   </AnchorPane>
                </top>
-               <padding>
-                  <Insets left="125.0" right="125.0" top="100.0" />
-               </padding>
+               <center>
+                  <StackPane fx:id="contentArea"/>
+               </center>
             </BorderPane>
          </children>
       </VBox>
