--- a/src/main/resources/com/example/FACT/gameplay.fxml
+++ b/src/main/resources/com/example/FACT/gameplay.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,9 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" spacing="20.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
+<VBox alignment="TOP_CENTER" prefHeight="503.0" spacing="20.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
     <children>
-      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+      <BorderPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <padding>
             <Insets bottom="100.0" left="125.0" right="125.0" top="100.0" />
          </padding>
@@ -42,6 +41,9 @@
                      </font>
                   </Text>
                </children>
+               <BorderPane.margin>
+                  <Insets bottom="60.0" />
+               </BorderPane.margin>
             </AnchorPane>
          </top>
          <bottom>
