--- a/src/main/resources/com/example/FACT/homepage.fxml
+++ b/src/main/resources/com/example/FACT/homepage.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" spacing="20.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.HomePageController">
+<VBox alignment="TOP_CENTER" spacing="20.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.HomePageController">
     <children>
-        <fx:include source="homebase.fxml" />
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <padding>
             <Insets bottom="100.0" left="125.0" right="125.0" top="100.0" />
@@ -38,21 +34,11 @@
                         <Font name="Helvetica Neue Light" size="25.0" />
                      </font>
                   </Label>
-                    <Button fx:id="homepagePracButton" layoutX="432.0" layoutY="437.0" onAction="#onHomePracButton" prefHeight="60.0" prefWidth="350.0" style="-fx-background-color: #3578C9;" text="PRACTICE" textFill="WHITE">
-                        <font>
-                            <Font name="Helvetica Bold" size="30.0" />
-                        </font>
-                    </Button>
                     <Button fx:id="logoutButton" layoutX="432.0" layoutY="589.0" onAction="#onLogout" prefHeight="60.0" prefWidth="350.0" style="-fx-background-color: #3578C9;" text="LOGOUT" textFill="WHITE">
                         <font>
                             <Font name="Helvetica Bold" size="30.0" />
                         </font>
                     </Button>
-                   <Button fx:id="createButton" layoutX="432.0" layoutY="511.0" onAction="#onCreateButton" prefHeight="60.0" prefWidth="350.0" style="-fx-background-color: #3578C9;" text="CREATE" textFill="WHITE">
-                       <font>
-                           <Font name="Helvetica Bold" size="30.0" />
-                       </font>
-                   </Button>
                </children>
                <padding>
                   <Insets bottom="25.0" />
