--- a/src/main/resources/com/example/FACT/login.fxml
+++ b/src/main/resources/com/example/FACT/login.fxml
@@ -24,7 +24,7 @@
                      <viewport>
                         <Rectangle2D />
                      </viewport>
-                     <Image url="@../../../../../../images/logo.png" />
+                     <Image url="@../../../images/logo.png" />
                   </ImageView>
                   <Button fx:id="closeButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="X" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-50.0" AnchorPane.topAnchor="-10.0">
                      <font>
